# axum-todo

./: Cargo.toml  Makefile
migrations/: 20250131123529_initial_todos.sql
src/: main.rs
src/todos/: models.rs  routes.rs  services.rs
